<resources>
    <string name="app_name">KitchenAdventures</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_will_be_your_kitchen_adventure_today">What will be your kitchen adventure today?</string>
    <string name="carrot_cake_oatmeal">Carrot Cake Oatmeal</string>
    <string name="chia_smoothie_jars">Chia Smoothie Jars</string>
    <string name="buckwheat_oat_pancakes">Buckwheat Oat Pancakes</string>
    <string name="sweet_spicy_miso_tofu"><![CDATA[Sweet & Spicy Miso Tofu]]></string>
    <string name="avocado_pesto">Avocado \'Pesto\'</string>
    <string name="meaty_vegan_chili">Meaty Vegan Chili</string>
    <string name="chocolate_bundt_cake">Chocolate Bundt Cake</string>
    <string name="cinnamon_rolls">Cinnamon Rolls</string>
    <string name="green_tea_muffins">Green Tea Muffins</string>
    <string name="Ingredients">Ingredients:</string>
    <string name="Instructions">Instructions:</string>
    <string name="recipe_image">recipe image</string>
    <string name="welcome_to_kitchen_adventures">Welcome to Kitchen Adventures!</string>
    <string-array name="restaurants">restaurants</string-array>
</resources>
